--- a/src/main/resources/templates/fragments/admin/sidebar.html
+++ b/src/main/resources/templates/fragments/admin/sidebar.html
@@ -1,118 +1,116 @@
-
 <!-- ============================================================== -->
 <!-- Left Sidebar - style you can find in sidebar.scss  -->
 <!-- ============================================================== -->
 <aside class="left-sidebar noprint" data-sidebarbg="skin6">
-  <!-- Sidebar scroll-->
-  <div class="scroll-sidebar" data-sidebarbg="skin6">
-    <!-- Sidebar navigation-->
-    <nav class="sidebar-nav">
-      <ul id="sidebarnav">
-        <li class="sidebar-item">
-          <a class="sidebar-link sidebar-link" href="/secure/dashboard" aria-expanded="false">
-            <i data-feather="home" class="feather-icon"></i>
-            <span class="hide-menu">Dashboard</span>
-          </a>
-        </li>
-<!--        <li class="list-divider"></li>-->
+    <!-- Sidebar scroll-->
+    <div class="scroll-sidebar" data-sidebarbg="skin6">
+        <!-- Sidebar navigation-->
+        <nav class="sidebar-nav">
+            <ul id="sidebarnav">
+                <li class="sidebar-item">
+                    <a class="sidebar-link sidebar-link" href="/secure/dashboard" aria-expanded="false">
+                        <i data-feather="home" class="feather-icon"></i>
+                        <span class="hide-menu">Dashboard</span>
+                    </a>
+                </li>
+                <!--        <li class="list-divider"></li>-->
 
-<!--        <li class="sidebar-item"> <a class="sidebar-link" href="/secure/ivcs-profile"-->
-<!--                                     aria-expanded="false"><i data-feather="user" class="feather-icon"></i>-->
-<!--          <span class="hide-menu">User Profile</span></a>-->
-<!--        </li>-->
-
-
-        <li class="list-divider"></li>
-<!--        <li class="sidebar-item">-->
-<!--          <a class="sidebar-link has-arrow" href="javascript:void(0)" aria-expanded="false">-->
-<!--            <i data-feather="file-text" class="feather-icon"></i>-->
-<!--            <span class="hide-menu">Master Data</span>-->
-<!--          </a>-->
-<!--          <ul aria-expanded="false" class="collapse  first-level base-level-line">-->
-<!--            <li class="sidebar-item">-->
-<!--              <a href="ivcs_view" class="sidebar-link">-->
-<!--                <span class="hide-menu">Category</span>-->
-<!--              </a>-->
-<!--            </li>-->
-<!--            <li class="sidebar-item">-->
-<!--              <a href="ivcs_view" class="sidebar-link">-->
-<!--                <span class="hide-menu">Ph Category</span>-->
-<!--              </a>-->
-<!--            </li>-->
-<!--            <li class="sidebar-item">-->
-<!--              <a href="ivcs_view" class="sidebar-link">-->
-<!--                <span class="hide-menu">Waiting List </span>-->
-<!--              </a>-->
-<!--            </li>-->
+                <!--        <li class="sidebar-item"> <a class="sidebar-link" href="/secure/ivcs-profile"-->
+                <!--                                     aria-expanded="false"><i data-feather="user" class="feather-icon"></i>-->
+                <!--          <span class="hide-menu">User Profile</span></a>-->
+                <!--        </li>-->
 
 
-<!--            &lt;!&ndash;            <li class="sidebar-item">&ndash;&gt;-->
-<!--            &lt;!&ndash;              <a href="ivcs_view" class="sidebar-link">&ndash;&gt;-->
-<!--            &lt;!&ndash;                <span class="hide-menu"> View</span>&ndash;&gt;-->
-<!--            &lt;!&ndash;              </a>&ndash;&gt;-->
-<!--            &lt;!&ndash;            </li>&ndash;&gt;-->
-<!--          </ul>-->
-<!--        </li>-->
-
-<!--        <li class="list-divider"></li>-->
-        <li class="sidebar-item"> <a class="sidebar-link has-arrow" href="javascript:void(0)"
-                                     aria-expanded="false"><i data-feather="file-text" class="feather-icon"></i><span
-                class="hide-menu">Reports </span></a>
-          <ul aria-expanded="false" class="collapse  first-level base-level-line">
-
-            <li class="sidebar-item">
-              <a href="registration_list" class="sidebar-link">
-                <span class="hide-menu">Registered Applicants</span>
-              </a>
-            </li>
-            <li class="sidebar-item">
-              <a href="check_list" class="sidebar-link">
-                <span class="hide-menu">Check List</span>
-              </a>
-            </li>
-            <li class="sidebar-item">
-              <a href="view_merit_list" class="sidebar-link">
-                <span class="hide-menu">Merit List</span>
-              </a>
-            </li>
-            <li class="sidebar-item">
-              <a href="ivcs_view" class="sidebar-link">
-                <span class="hide-menu">Waiting List</span>
-              </a>
-            </li>
-<!--            <li class="sidebar-item">-->
-<!--              <a href="/secure/ivcs-data-reported" class="sidebar-link">-->
-<!--                <span class="hide-menu"> Reports  </span>-->
-<!--              </a>-->
-<!--           </li>-->
-          </ul>
-        </li>
-        <li class="sidebar-item"> <a class="sidebar-link has-arrow" href="javascript:void(0)"
-                                     aria-expanded="false"><i data-feather="file-plus" class="feather-icon"></i><span
-                class="hide-menu">Tasks </span></a>
-          <ul aria-expanded="false" class="collapse  first-level base-level-line">
-
-            <li class="sidebar-item">
-              <a href="add_merit_list" class="sidebar-link">
-                <span class="hide-menu">Add to Merit List</span>
-              </a>
-            </li>
-          </ul>
-        </li>
+                <li class="list-divider"></li>
+                <!--        <li class="sidebar-item">-->
+                <!--          <a class="sidebar-link has-arrow" href="javascript:void(0)" aria-expanded="false">-->
+                <!--            <i data-feather="file-text" class="feather-icon"></i>-->
+                <!--            <span class="hide-menu">Master Data</span>-->
+                <!--          </a>-->
+                <!--          <ul aria-expanded="false" class="collapse  first-level base-level-line">-->
+                <!--            <li class="sidebar-item">-->
+                <!--              <a href="ivcs_view" class="sidebar-link">-->
+                <!--                <span class="hide-menu">Category</span>-->
+                <!--              </a>-->
+                <!--            </li>-->
+                <!--            <li class="sidebar-item">-->
+                <!--              <a href="ivcs_view" class="sidebar-link">-->
+                <!--                <span class="hide-menu">Ph Category</span>-->
+                <!--              </a>-->
+                <!--            </li>-->
+                <!--            <li class="sidebar-item">-->
+                <!--              <a href="ivcs_view" class="sidebar-link">-->
+                <!--                <span class="hide-menu">Waiting List </span>-->
+                <!--              </a>-->
+                <!--            </li>-->
 
 
+                <!--            &lt;!&ndash;            <li class="sidebar-item">&ndash;&gt;-->
+                <!--            &lt;!&ndash;              <a href="ivcs_view" class="sidebar-link">&ndash;&gt;-->
+                <!--            &lt;!&ndash;                <span class="hide-menu"> View</span>&ndash;&gt;-->
+                <!--            &lt;!&ndash;              </a>&ndash;&gt;-->
+                <!--            &lt;!&ndash;            </li>&ndash;&gt;-->
+                <!--          </ul>-->
+                <!--        </li>-->
+
+                <!--        <li class="list-divider"></li>-->
+                <li class="sidebar-item"><a class="sidebar-link has-arrow" href="javascript:void(0)"
+                                            aria-expanded="false"><i data-feather="file-text"
+                                                                     class="feather-icon"></i><span
+                        class="hide-menu">Reports </span></a>
+                    <ul aria-expanded="false" class="collapse  first-level base-level-line">
+
+                        <li class="sidebar-item">
+                            <a href="registration_list" class="sidebar-link">
+                                <span class="hide-menu">Registered Applicants</span>
+                            </a>
+                        </li>
+                        <li class="sidebar-item">
+                            <a href="check_list" class="sidebar-link">
+                                <span class="hide-menu">Check List</span>
+                            </a>
+                        </li>
+                        <li class="sidebar-item">
+                            <a href="view_merit_list" class="sidebar-link">
+                                <span class="hide-menu">Merit List</span>
+                            </a>
+                        </li>
+                        <li class="sidebar-item">
+                            <a href="view_waiting_list" class="sidebar-link">
+                                <span class="hide-menu">Waiting List</span>
+                            </a>
+                        </li>
+                        <!--            <li class="sidebar-item">-->
+                        <!--              <a href="/secure/ivcs-data-reported" class="sidebar-link">-->
+                        <!--                <span class="hide-menu"> Reports  </span>-->
+                        <!--              </a>-->
+                        <!--           </li>-->
+                    </ul>
+                </li>
+                <li class="sidebar-item"><a class="sidebar-link has-arrow" href="javascript:void(0)"
+                                            aria-expanded="false"><i data-feather="file-plus"
+                                                                     class="feather-icon"></i><span
+                        class="hide-menu">Tasks </span></a>
+                    <ul aria-expanded="false" class="collapse  first-level base-level-line">
+
+                        <li class="sidebar-item">
+                            <a href="add_merit_list" class="sidebar-link">
+                                <span class="hide-menu">Add to Merit List</span>
+                            </a>
+                        </li>
+                    </ul>
+                </li>
 
 
-        <li class="list-divider"></li>
+                <li class="list-divider"></li>
 
 
-
-      </ul>
-    </nav>
-    <!-- End Sidebar navigation -->
-  </div>
-  <!-- End Sidebar scroll-->
+            </ul>
+        </nav>
+        <!-- End Sidebar navigation -->
+    </div>
+    <!-- End Sidebar scroll-->
 </aside>
-    <!-- ============================================================== -->
-    <!-- End Left Sidebar - style you can find in sidebar.scss  -->
-    <!-- ============================================================== -->
+<!-- ============================================================== -->
+<!-- End Left Sidebar - style you can find in sidebar.scss  -->
+<!-- ============================================================== -->
