Edit Module Updated

--- a/src/main/resources/templates/fragments/admin/sidebar.html
+++ b/src/main/resources/templates/fragments/admin/sidebar.html
@@ -32,6 +32,11 @@
                                 <span class="hide-menu">Remove from Merit List</span>
                             </a>
                         </li>
+                        <li class="sidebar-item">
+                            <a href="edit_application" class="sidebar-link">
+                                <span class="hide-menu">Edit Application</span>
+                            </a>
+                        </li>
                     </ul>
                 </li>
                 <li class="sidebar-item"><a class="sidebar-link has-arrow" href="javascript:void(0)"
