--- a/src/main/resources/templates/secure/view_merit_list.html
+++ b/src/main/resources/templates/secure/view_merit_list.html
@@ -95,71 +95,72 @@
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h3 class="modal-title" id="exampleModalLabel"><span id="applicantNameTitle"></span>'s Application
+                    <h3 class="modal-title fw-bold text-dark" id="exampleModalLabel"><span
+                            id="applicantNameTitle"></span>'s Application
                     </h3>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div class="modal-body">
-                    <h4>Personal Details:</h4>
-                    <div class="row">
+                <div class="modal-body container">
+                    <h4 class="text-dark">Personal Details:</h4>
+                    <div class="row container mt-3 pb-5">
                         <div class="col-md-6">
-                            <div class="form-group">
+                            <div class="form-group pb-3">
                                 <label for="applicationNumber">Application Number</label>
                                 <input id="applicationNumber" class="form-control" readonly>
                             </div>
 
-                            <div class="form-group">
+                            <div class="form-group pb-3">
                                 <label for="fatherName">Father's Name</label>
                                 <input id="fatherName" class="form-control" readonly>
                             </div>
 
-                            <div class="form-group">
+                            <div class="form-group pb-3">
                                 <label for="gender">Gender</label>
                                 <input id="gender" class="form-control" readonly>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group pb-3">
                                 <label for="category">Category</label>
                                 <input id="category" class="form-control" readonly>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group pb-3">
                                 <label for="maritalStatus">Marital Status</label>
                                 <input id="maritalStatus" class="form-control" readonly>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group pb-3">
                                 <label for="email">Email</label>
                                 <input id="email" class="form-control" readonly>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group pb-3">
                                 <label for="mobileNumber">Mobile Number</label>
                                 <input id="mobileNumber" class="form-control" readonly>
                             </div>
 
                         </div>
                         <div class="col-md-6">
-                            <div class="form-group">
+                            <div class="form-group pb-3">
                                 <label for="centerName">Center Name</label>
                                 <input id="centerName" class="form-control" readonly>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group pb-3">
                                 <label for="motherName">Mother's Name</label>
                                 <input id="motherName" class="form-control" readonly>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group pb-3">
                                 <label for="dob">Date of Birth</label>
                                 <input id="dob" class="form-control" readonly>
                             </div>
 
 
-                            <div class="form-group">
+                            <div class="form-group pb-3">
                                 <label for="tribe">Tribe</label>
                                 <input id="tribe" class="form-control" readonly>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group pb-3">
                                 <label for="religion">Religion</label>
                                 <input id="religion" class="form-control" readonly>
                             </div>
 
-                            <div class="form-group">
+                            <div class="form-group pb-3">
                                 <label for="motherTongue">Mother Tongue</label>
                                 <input id="motherTongue" class="form-control" readonly>
                             </div>
@@ -167,88 +168,107 @@
 
                         </div>
                     </div>
-                    <h4>Address (Permanent):</h4>
-                    <div class="row">
+                    <h4 class="text-dark">Address (Permanent):</h4>
+                    <div class="row container mt-3 pb-5">
                         <div class="col-md-6">
-                            <div class="form-group">
+                            <div class="form-group pb-3">
                                 <label for="statePerm">State</label>
                                 <input id="statePerm" class="form-control" readonly>
                             </div>
 
-                            <div class="form-group">
+                            <div class="form-group pb-3">
                                 <label for="townPerm">Town</label>
                                 <input id="townPerm" class="form-control" readonly>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group pb-3">
                                 <label for="addressPerm">Address</label>
                                 <textarea id="addressPerm" class="form-control" readonly></textarea>
                             </div>
 
                         </div>
                         <div class="col-md-6">
-                            <div class="form-group">
+                            <div class="form-group pb-3">
                                 <label for="districtPerm">District</label>
                                 <input id="districtPerm" class="form-control" readonly>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group pb-3">
                                 <label for="pincodePerm">Pincode</label>
                                 <input id="pincodePerm" class="form-control" readonly>
                             </div>
                         </div>
                     </div>
-                    <h4>Address (Correspondence):</h4>
-                    <div class="row">
+                    <h4 class="text-dark">Address (Correspondence):</h4>
+                    <div class="row container mt-3 pb-5">
                         <div class="col-md-6">
-                            <div class="form-group">
+                            <div class="form-group pb-3">
                                 <label for="stateCorr">State</label>
                                 <input id="stateCorr" class="form-control" readonly>
                             </div>
 
-                            <div class="form-group">
+                            <div class="form-group pb-3">
                                 <label for="townCorr">Town</label>
                                 <input id="townCorr" class="form-control" readonly>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group pb-3">
                                 <label for="addressCorr">Address</label>
                                 <textarea id="addressCorr" class="form-control" readonly></textarea>
                             </div>
 
                         </div>
                         <div class="col-md-6">
-                            <div class="form-group">
+                            <div class="form-group pb-3">
                                 <label for="districtCorr">District</label>
                                 <input id="districtCorr" class="form-control" readonly>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group pb-3">
                                 <label for="pincodeCorr">Pincode</label>
                                 <input id="pincodeCorr" class="form-control" readonly>
                             </div>
 
                         </div>
                     </div>
-                    <h4>Bank Details:</h4>
-                    <div class="row">
+                    <h4 class="text-dark">Bank Details:</h4>
+                    <div class="row container mt-3 pb-5">
                         <div class="col-md-6">
-                            <div class="form-group">
+                            <div class="form-group pb-3">
                                 <label for="accountNumber">Account Number</label>
                                 <input id="accountNumber" class="form-control" readonly>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group pb-3">
                                 <label for="ifscCode">IFSC Code</label>
                                 <input id="ifscCode" class="form-control" readonly>
                             </div>
                         </div>
                         <div class="col-md-6">
-                            <div class="form-group">
+                            <div class="form-group pb-3">
                                 <label for="bankName">Bank Name</label>
                                 <input id="bankName" class="form-control" readonly>
                             </div>
                         </div>
                     </div>
+                    <h4 class="text-dark">Trades Selected:</h4>
+                    <div class="row container mt-3 pb-5">
+                        <div class="col-md-6">
+                            <div class="form-group pb-3">
+                                <label for="preferenceOne">First Preference</label>
+                                <input id="preferenceOne" class="form-control" readonly>
+                            </div>
+                            <div class="form-group pb-3">
+                                <label for="preferenceTwo">Second Preference</label>
+                                <input id="preferenceTwo" class="form-control" readonly>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group pb-3">
+                                <label for="preferenceThree">Third Preference</label>
+                                <input id="preferenceThree" class="form-control" readonly>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
             </div>
         </div>
     </div>
@@ -519,7 +539,7 @@ $(document).ready(function() {
 
                 $("#maritalStatus").val(data.maritalStatus.maritalStatus);
                 $("#motherTongue").val(data.mothertongue);
-                $("#mobileNumber").val(data.mobileno);
+                $("#mobileNumber").val(data.mobilenumber);
                 $("#photograph").val(data.photograph);
                 $("#highestQualification").val(data.highestQualification.qualificationName);
                 $("#email").val(data.email);
@@ -589,6 +609,8 @@ $(document).ready(function() {
     });
     }
 }
+
+
 
 
 
