--- a/src/main/resources/templates/fragments/admin/navbar.html
+++ b/src/main/resources/templates/fragments/admin/navbar.html
@@ -89,7 +89,7 @@
                         </a>
                         <div class="dropdown-divider"></div>
                         <div class="pl-4 p-3">
-                            <a href="/logout" class="btn btn-sm btn-info">
+                            <a href="/itiadmission/logout" class="btn btn-sm btn-info">
                                 <i data-feather="power" class="svg-icon me-2 ms-1"></i>
                                 Logout
                             </a>
